--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 ---
-# layout: default
+layout: horizontal
 ---
 
 <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
-    max-width: 600px;
+    max-width: 100%;
     text-align: center;
   }
   h1 {
