--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@ permalink: /
 title: Autimismus
 ---
 
-<h1>Huisstijlgids Autimismus.</h1>
+<h1>Huisstijlgids Autimismus</h1>
 
 <h2>Autimismus.vzw</h2>
 
