--- a/pages/index.html
+++ b/pages/index.html
@@ -16,4 +16,4 @@ title: Autimismus
 <p>
 		In deze huisstijlgids vindt u alle informatie die u nodig hebt om de huisstijl van Autimismus.vzw op een correcte manier toe te passen. De gids omvat richtlijnen en afspraken omtrent het logo, de gebruikte lettertypes en kleuren en het ontwerpen van verschillende andere toepassingen. Deze richtlijnen dienen consistent toegepast te worden om de identiteit van de organisatie te versterken.
 
-		Deze huisstijlgids werd gemaakt door Marie Gielen in het kader van haar Bachelorproef voor de opleiding <a href="https://www.arteveldehogeschool.be/opleidingen/bachelor/grafische-en-digitale-media">Grafische en Digitale Media</a> aan <a href="https://www.arteveldehogeschool.be">Arteveldehogeschool</a>.<br><br><br><br><br></p>
+		Deze huisstijlgids werd gemaakt door Marie Gielen in het kader van haar Bachelorproef voor de opleiding <a href="https://www.arteveldehogeschool.be/opleidingen/bachelor/grafische-en-digitale-media">Grafische en Digitale Media</a> aan <a href="https://www.arteveldehogeschool.be">Arteveldehogeschool</a>.<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
